# us_financial_scraper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  VIX_Returns.md  confirm_sync.py  docker-compose.yml  fix_scraper.py  last_page_debug.html  main.py  prompt.md  pyproject.toml  readme.md  reward.md  sec_form_future.csv  test_db.py  test_figi_mic.py  test_pandas.py  test_pd.py  test_universe.py  波动率总结.md  补充特征.md
scripts/: backfill_missing_universe_cik.py  check_active_tickers_recent_klines.py  check_state0_oldest_klines.py
src/: __init__.py  cboe_data_fetcher.py  cboe_scraper.py  forex_factory_scraper.py  forexfactory_economic_calendar_scraper.py  fred_scraper.py  gdelt_scraper.py  gemini_financial_prompt.py  massive_actions_scraper.py  massive_benchmark_scraper.py  massive_filings_disclosures_scraper.py  massive_financial_factor_scraper.py  massive_fundamental_scraper.py  massive_fundamentals_scraper.py  massive_kline_scraper.py  massive_news_scraper.py  massive_scraper.py  openinsider_scraper.py  sec_edgar_scraper.py  yahoo_finance_1min_kline_scraper.py  yahoo_finance_macro_scraper.py  yahoo_finance_marco_scraper.py
src/api/: __init__.py  massive_api.py  massive_wss_client.py  open_figi_client.py
src/config/: __init__.py  settings.py
src/dao/: __init__.py  clickhouse_manager.py  fundamental_repo.py  market_data_repo.py  sec_edgar_repo.py  sentiment_repo.py
src/forexfactory_scraper/: __init__.py
src/model/: __init__.py  base_clickhouse_model.py  gdelt_macro_sentiment_model.py  sec_form4_model.py  (+36 more)
tests/: test_ff_scraper.py  test_massive_kline_scraper.py  test_secedgar_sandbox.py
(+22 files in other folders)
