[project]
name = "us-financial-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "clickhouse-connect>=0.14.1",
    "curl-cffi>=0.13.0",
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "google-genai>=1.67.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "loguru>=0.7.3",
    "pandas-market-calendars>=4.6.0",
    "lxml>=6.0.2",
    "sec-edgar-downloader>=5.1.0",
    "beautifulsoup4>=4.14.3",
    "websockets>=15.0.1",
]
